# ILLIXR_relay_and_client

ILLIXR/: build_server.sh  illixr2.yaml
ILLIXR/plugins/: plugins.yaml
ILLIXR/plugins/tcp_minimal_backend/: CMakeLists.txt  plugin.cpp  plugin.hpp
